==> cryviem/choen/stm32OS/ee_files/contrib/as/arch/rx200_5f5210x/ccrx/drivers/Mcu.c <==
#define	MCU_AR_RELEASE_MAJOR_VERSION	4
#define	MCU_AR_RELEASE_MINOR_VERSION	0
#include "Mcu.h"
#include "ee.h"
#include "Det.h"
#include "Dem.h"
#define VALIDATE(_exp,_api,_err) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    return; \
  }
#define VALIDATE_IRQ(_exp,_api,_err,_flags) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    EE_hal_resumeIRQ(_flags); \
    return; \
  }
#define VALIDATE_W_RV(_exp,_api,_err,_rv) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    return (_rv); \
  }
#define VALIDATE_IRQ_W_RV(_exp,_api,_err,_rv,_flags) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    EE_hal_resumeIRQ(_flags); \
    return (_rv); \
  }
#define VALIDATE(_exp,_api,_err) \
  if( !(_exp) ) { \
    return; \
  }
#define VALIDATE_IRQ(_exp,_api,_err,_flags) \
  if( !(_exp) ) { \
    EE_hal_resumeIRQ(_flags); \
    return; \
  }
#define VALIDATE_W_RV(_exp,_api,_err,_rv) \
  if( !(_exp) ) { \
    return (_rv); \
  }
#define VALIDATE_IRQ_W_RV(_exp,_api,_err,_rv,_flags) \
  if( !(_exp) ) { \
    EE_hal_resumeIRQ(_flags); \
    return (_rv); \
  }
#include "Hardware.h"	/* Hardware Abstraction Header File. */

Std_ReturnType Mcu_InitClock( Mcu_ClockType ClockSetting )
{
	register EE_FREG			flags;
	register Std_ReturnType		ret;

	VALIDATE_W_RV(
				( ClockSetting <= MCU_CLOCK_MODES_NUMBER ),
				  MCU_INITCLOCK_SERVICE_ID,
				  MCU_E_PARAM_CLOCK,
				  E_NOT_OK
				  );

	flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ_W_RV(
					  Mcu_Global.Init,
					  MCU_INITCLOCK_SERVICE_ID,
					  MCU_E_UNINIT,
					  E_NOT_OK,
					  flags
					  );

	ret = Mcu_InitSystemClock(
					&Mcu_Global.ConfigPtr->McuClockSettingConfig[ClockSetting]
							  );

	if ( ret == E_OK ) {
	  
		Mcu_Global.ClockSetting = ClockSetting;
		
		//return E_OK;
	}

	EE_hal_resumeIRQ(flags);

	return ret;

}

Mcu_PllStatusType Mcu_GetPllStatus(void)
{

	register EE_FREG	flags;
	register Mcu_PllStatusType	ret;

	flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ_W_RV(
					  Mcu_Global.Init,
					  MCU_GETPLLSTATUS_SERVICE_ID,
					  MCU_E_UNINIT,
					  MCU_PLL_STATUS_UNDEFINED,
					  flags
					  );

#if ( MCU_NO_PLL == STD_ON )
	ret = MCU_PLL_STATUS_UNDEFINED;
#else
	if (SYSTEM.PLLCR2.BYTE)
		ret = MCU_PLL_UNLOCKED;
	else
		ret = MCU_PLL_LOCKED;
#endif

	EE_hal_resumeIRQ(flags);

	return ret;

}

Mcu_ResetType Mcu_GetResetReason(void) 
{

	register EE_FREG	flags;

	register uint8		resc;
	register Mcu_ResetType	ret;

	flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ_W_RV(
					  Mcu_Global.Init,
					  MCU_GETRESETREASON_SERVICE_ID,
					  MCU_E_UNINIT,
					  MCU_RESET_UNDEFINED,
					  flags
					  );

	/* Read reset reason							*/
	resc = (SYSTEM.RSTSR0.BYTE & 0x8F) | (SYSTEM.RSTSR2.BYTE << 4);
	/* Clear reset registers						*/
	SYSTEM.RSTSR0.BYTE = SYSTEM.RSTSR2.BYTE = 0x00;
	
	if ( resc & SYS_RESC_POR ) {
		ret = MCU_POWER_ON_RESET;
	} else if ( resc & (SYS_RESC_IWDT | SYS_RESC_WDT) ) {
		ret = MCU_WATCHDOG_RESET;
	} else if (resc & SYS_RESC_SW) {
		ret = MCU_SW_RESET;
	} else {
		ret = MCU_RESET_UNDEFINED;
	}

	EE_hal_resumeIRQ(flags);

	return ret;

}

Mcu_RawResetType Mcu_GetResetRawValue(void)
{

	register EE_FREG		flags;
	register Mcu_RawResetType	ret;

	flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ_W_RV(
					  Mcu_Global.Init,
					  MCU_GETRESETREASON_SERVICE_ID,
					  MCU_E_UNINIT,
					  0x00000000U,
					  flags
					  );

	/* Read reset reason								*/
	ret = (SYSTEM.RSTSR0.BYTE & 0x8F) | (SYSTEM.RSTSR2.BYTE << 4);
	/* Clear reset registers							*/
	SYSTEM.RSTSR0.BYTE = SYSTEM.RSTSR2.BYTE = 0x00;

	EE_hal_resumeIRQ(flags);

	return ret;

}

void Mcu_PerformReset(void)
{

	register EE_FREG	flags;

	flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ(
				 Mcu_Global.Init,
				 MCU_PERFORMRESET_SERVICE_ID,
				 MCU_E_UNINIT,
				 flags
				 );
	
	/* Allow the writing to SWRR register 				*/
	SYSTEM.PRCR.WORD = 0xA502;
	
	/* Perform software reset							*/
	SYSTEM.SWRR.WORD = 0xA501;
	
	/* Protect the writing to SWRR register 			*/
	SYSTEM.PRCR.WORD = 0xA500;
	
	EE_hal_resumeIRQ(flags);
	
	while(TRUE);	/* Waiting for Reset to perform.	*/	


}

void Mcu_SetMode(Mcu_ModeType McuMode)
{

  register EE_FREG			flags;

  flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ( 
				 Mcu_Global.Init, 
				 MCU_SETMODE_SERVICE_ID, 
				 MCU_E_UNINIT, 
				 flags );

	VALIDATE_IRQ( 
				 ( McuMode < Mcu_Global.ConfigPtr->McuNumberOfMcuModes ),
				 MCU_SETMODE_SERVICE_ID,
				 MCU_E_PARAM_MODE,
				 flags
				 );

  /* NOT YET IMPLEMENTED, reason: operational mode only */

  EE_hal_resumeIRQ(flags);

}
