==> cryviem/choen/stm32OS/ee_files/contrib/as/arch/mpc56xx/codewarrior/drivers/Mcu.c <==
#define MCU_AR_RELEASE_MAJOR_VERSION  4
#define MCU_AR_RELEASE_MINOR_VERSION  0
#include "Mcu.h"
#define AS_MODULE_ID MCU_MODULE_ID
#include <ee.h>
#include "Hardware.h" /* Hardware Abstraction Header File. */
#include "Utility.h"

Std_ReturnType Mcu_InitClock(Mcu_ClockType ClockSetting)
{
  /* Flags for Critical Section */
  register EE_FREG f;

  /* Clock Settings */
  const Mcu_ClockSettingConfigType * clockSettingsPtr;
  /* Flag if a PLL is locked */
  boolean pll_locked;
  /* Flag if PLLs sources need to be changed */
  boolean change_pll_source;
  /* Active Hardware Mode */
  Mcu_HardwareModeIdType active_hw_mode;
  /* Hardware Mode Configuration */
  uint32 mode_configuration;

  /* Start Critical Section */
  f = EE_hal_suspendIRQ();

  /* Unizializated Condition Check */
  if((Mcu_Global.init == FALSE) || (Mcu_Global.mode == MCU_MODE_INVALID)) {
    AS_ERROR(MCU_INITCLOCK_SERVICE_ID, MCU_E_UNINIT);

    /* End Critical Section */
    EE_hal_resumeIRQ(f);
    return E_NOT_OK;
  }

  /* Get Clock Settings */
  clockSettingsPtr = &Mcu_Global.config->McuClockSettingConfig[ClockSetting];

  /* PLL is locked ? */
  pll_locked = (CGM.FMPLL[0].CR.B.S_LOCK || CGM.FMPLL[1].CR.B.S_LOCK);

  /* PLLs sources need to be changed ? */
  change_pll_source = EE_mcu_pll_source_changed(clockSettingsPtr);

  /* Active Hardware Mode */
  active_hw_mode = MCU_HARDWARE_MODE_ACTIVE();

  /* Hardware Mode Configuration */
  mode_configuration = ME_GET_MC(active_hw_mode);

  /*                          !!! WARNING !!!
    If pll is locked and I have to change pll source I have (maybe) to switch
    to RC internal OSC and (obligatorily) disable PLLs.
  */
  if(pll_locked && change_pll_source)
  {
    ME_SET_MC(active_hw_mode, mode_configuration &
      EE_MODE_CLEAR_CLK & EE_MODE_CLEAR_PLL0 & EE_MODE_CLEAR_PLL1);
    EE_mcu_perform_mode_switch(active_hw_mode);
  }

  /* Configure Auxiliary Clocks */
  EE_mcu_configure_auxiliary_clocks(clockSettingsPtr);

  /* TODO: check the following better */
  /* Monitor FXOSC > FIRC/1 (16MHz); no PLL monitor */
  /* CGM.CMU_0_CSR.R = 0x000000000; */

  /* fsys = (fcrystal * ndiv) / (idf * odf) */
  /* fvco must be from 256 MHz to 512 MHz and fvco = fsys * odf */
  /* E.G. we want fsys = 120 MHz. fvco = fsys*odf = 120 MHz * 4 = 480 MHz */
  /* fsys =  (40 * 96)/(8 * 4) = 120 MHz */

  /* For system clock configure PLLs */
  CGM.FMPLL[0].CR.R = (clockSettingsPtr->McuPll0Configuration |
    EE_ENABLE_PROG_PLL_SWITCHING );
  CGM.FMPLL[1].CR.R = (clockSettingsPtr->McuPll1Configuration |
    EE_ENABLE_PROG_PLL_SWITCHING );


  /* Configure Mode to change Clock frequency */
  if( !HW_REG_BITMASK_CHECK(mode_configuration, MCU_MODE_SYSCLK_FMPLL) ) {
    /* Actual Mode Configuration doesn't use FMPLL so I cannot change clock */
    /* I adjust mode configuration */
    mode_configuration = (mode_configuration & EE_MODE_CLEAR_CLK) |
      MCU_MODE_PLL1_ON | MCU_MODE_PLL0_ON | MCU_MODE_XOSC_ON |
      MCU_MODE_IRCOSC_ON | MCU_MODE_SYSCLK_FMPLL;
  }

  /* Mode Switch to change Clock frequency */
  ME_SET_MC(active_hw_mode, mode_configuration);
  EE_mcu_perform_mode_switch(active_hw_mode);

#ifdef MCU_CLOCK_MAX_FREQ_WITHOUT_RAM_WAIT
  if (clockSettingsPtr->McuClockReferencePointFrequency >=
        MCU_CLOCK_MAX_FREQ_WITHOUT_RAM_WAIT)
  {
      /* Add a wait state in RAM read */
      EE_ECSM_MUDCR = 0x40000000U;
  }
#endif /* MCU_CLOCK_MAX_FREQ_WITHOUT_RAM_WAIT */

  /* Select Right Output Clock (if needed) */
  EE_mcu_select_clock_output(mode_configuration);

  /* Set new clock setting */
  Mcu_Global.clock = ClockSetting;

  /* End Critical Section */
  EE_hal_resumeIRQ(f);

  return E_OK;
}

Mcu_PllStatusType Mcu_GetPllStatus(void)
{
  Mcu_PllStatusType pll_status;

  /* CGM.FMPLL[0] it's system pll */
  if (CGM.FMPLL[0].CR.B.S_LOCK ) {
    pll_status = MCU_PLL_LOCKED;
  } else {
    pll_status = MCU_PLL_UNLOCKED;
  }

  return pll_status;
}

Mcu_ResetType Mcu_GetResetReason(void)
{
  Mcu_ResetType reset_reason;

  /* N.B Destructive software Reset is not supported yet by this driver */
  if( RGM.DES.B.F_POR ) {
    reset_reason = MCU_POWER_ON_RESET;
  } else if( RGM.FES.B.F_SOFT_FUNC || RGM.DES.B.F_SOFT_DEST ) {
    reset_reason = MCU_SW_RESET;
  } else if( RGM.FES.B.F_SWT || RGM.FES.B.F_CWD ) {
    /* SWT or Core Watchdog reset */
    reset_reason = MCU_WATCHDOG_RESET;
  } else {
    reset_reason = MCU_RESET_UNDEFINED;
  }
}

Mcu_RawResetType Mcu_GetResetRawValue(void)
{
  Mcu_RawResetType reset_raw_value;
  if( RGM.DES.R ) {
    reset_raw_value = RGM.DES.R;
  } else {
    reset_raw_value = RGM.FES.R;
  }

  /* Reset start-up reset events */
  EE_mcu_clear_functional_reset_flags(MCU_RESET_CLEAR_ALL_FLAGS);
  EE_mcu_clear_destructive_reset_flags(MCU_RESET_CLEAR_ALL_FLAGS);

  return reset_raw_value;
}

void Mcu_PerformReset(void)
{
  /* XXX: At this time only Software Functional Reset it's supported */
  EE_hal_disableIRQ();
  EE_mcu_perform_mode_switch(MCU_MODE_ID_RESET);
}

void Mcu_SetMode(Mcu_ModeType McuMode)
{
  /* Flags for Critical Section */
  register EE_FREG f;
  /* Mode Settings */
  const Mcu_ModeSettingConfigType * modeSettingsPtr;
  /* Mode Hardware ID*/
  Mcu_HardwareModeIdType mode_hw_id;
  /* Mode Configuration */
  uint32 mode_conf;

  /* Start Critical Section */
  f = EE_hal_suspendIRQ();

  /* Unizializated Condition Check */
  if(Mcu_Global.init == FALSE) {
    AS_ERROR(MCU_INITCLOCK_SERVICE_ID, MCU_E_UNINIT);

    /* End Critical Section */
    EE_hal_resumeIRQ(f);
    return;
  }

  /* Get Mode Settings, HW mode ID & mode configuration */
  modeSettingsPtr = &Mcu_Global.config->McuModeSettingConf[McuMode];
  mode_hw_id      = modeSettingsPtr->McuHardwareModeId;
  mode_conf       = modeSettingsPtr->McuRunConfiguration;

  /* Set mode configuration */
  ME_SET_MC(mode_hw_id, mode_conf);

  /* Perform Switch */
  EE_mcu_perform_mode_switch(mode_hw_id);

  /* Select Right Output Clock (if needed) */
  EE_mcu_select_clock_output(mode_conf);

  /* Set Actual mode */
  Mcu_Global.mode = McuMode;

  /* End Critical Section */
  EE_hal_resumeIRQ(f);
}
